[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-ai"
dynamic = ["version"]
description = "Vision AI: Deep Learning models trained on image and video data."
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.8.0",
    "numpy>=1.23.0",
    "optax>=0.1.8",
    "wandb>=0.16.1",
    "orbax>=0.1.9",
    "clu @ git+https://github.com/google/CommonLoopUtils",
    "pillow>=10.1.0",
]
license = { file = "LICENSE" }

[tool.setuptools]
package-dir = { "visionai" = "visionai" }

[project.optional-dependencies]
dev = ["black>=21.6b0", "isort>=5.9.2", "pytest>=7.4.4"]
